[gd_scene load_steps=18 format=3 uid="uid://dre7o0sh41fk7"]

[ext_resource type="Script" path="res://arena.gd" id="1_4xuhd"]
[ext_resource type="PackedScene" uid="uid://dsnilnfvh87n4" path="res://player.tscn" id="1_juo8i"]
[ext_resource type="Texture2D" uid="uid://8g3c0x7xj6s5" path="res://game_background.png" id="2_wvkoy"]
[ext_resource type="FontFile" uid="uid://dm8hlnh7qdi5p" path="res://MenuAssets/menu_font.otf" id="4_ve7b5"]
[ext_resource type="Script" path="res://score.gd" id="5_gx2gi"]
[ext_resource type="Texture2D" uid="uid://cwpbf2dk31u5w" path="res://870726cd-bdf5-45c8-9694-249d4d174941.png" id="6_pxifb"]
[ext_resource type="Script" path="res://background.gd" id="7_au5qa"]
[ext_resource type="Texture2D" uid="uid://ddcwqrgv1apcc" path="res://422b8fa2-f27c-46d6-8bc4-cab6ce5d86b2.png" id="7_h5otx"]
[ext_resource type="Texture2D" uid="uid://ct5row4x1chj8" path="res://healt 2.png" id="8_11bq5"]
[ext_resource type="Texture2D" uid="uid://bnjusj5686ywg" path="res://health 1.png" id="9_t2e40"]
[ext_resource type="Texture2D" uid="uid://bcax4w710yw81" path="res://ammo.png" id="10_3suh6"]
[ext_resource type="Texture2D" uid="uid://b1m45ne1tqpe1" path="res://29706583-d94c-49ee-9cf3-f2d2ad86846f.png" id="11_43mu4"]
[ext_resource type="Script" path="res://reload_ad.gd" id="12_ovasc"]
[ext_resource type="PackedScene" uid="uid://bumeje71mfyyv" path="res://menu_ingame.tscn" id="14_ssccl"]
[ext_resource type="Script" path="res://ControlsTouch.gd" id="15_numha"]
[ext_resource type="Texture2D" uid="uid://3be7o44dqgbu" path="res://boton.png" id="16_a1vf7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_h2rnp"]
radius = 101.25

[node name="Node2D" type="Node2D"]
script = ExtResource("1_4xuhd")

[node name="background" type="Sprite2D" parent="."]
position = Vector2(1196.1, 533)
scale = Vector2(1.2499, 1.005)
texture = ExtResource("2_wvkoy")
metadata/_edit_lock_ = true

[node name="Sprite2D" parent="." instance=ExtResource("1_juo8i")]
position = Vector2(1266, 605)
metadata/_edit_lock_ = true

[node name="UI" type="Node2D" parent="."]
z_index = 16
metadata/_edit_lock_ = true

[node name="Control" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
metadata/_edit_lock_ = true

[node name="score" type="Label" parent="UI/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.142
anchor_right = 1.142
anchor_bottom = 0.11
offset_left = 0.359985
offset_top = 34.0
offset_right = 0.359863
offset_bottom = 0.199989
grow_horizontal = 2
theme_override_fonts/font = ExtResource("4_ve7b5")
theme_override_font_sizes/font_size = 70
text = "100"
horizontal_alignment = 1
script = ExtResource("5_gx2gi")
metadata/_edit_lock_ = true

[node name="background" type="TextureRect" parent="UI/Control"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.245
anchor_bottom = 0.958
offset_left = 77.0
offset_top = 55.0
offset_right = -1845.4
offset_bottom = -862.64
size_flags_horizontal = 4
texture = ExtResource("6_pxifb")
script = ExtResource("7_au5qa")
metadata/_edit_lock_ = true

[node name="live3" type="TextureRect" parent="UI/Control/background"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -234.0
offset_right = 234.0
offset_bottom = 117.0
grow_horizontal = 2
texture = ExtResource("7_h5otx")
metadata/_edit_lock_ = true

[node name="live2" type="TextureRect" parent="UI/Control/background"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -234.0
offset_right = 234.0
offset_bottom = 117.0
grow_horizontal = 2
texture = ExtResource("8_11bq5")
metadata/_edit_lock_ = true

[node name="live1" type="TextureRect" parent="UI/Control/background"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -234.0
offset_right = 234.0
offset_bottom = 117.0
grow_horizontal = 2
texture = ExtResource("9_t2e40")
metadata/_edit_lock_ = true

[node name="TextureProgressBar" type="TextureProgressBar" parent="UI/Control/background"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.123932
anchor_top = 0.717949
anchor_right = 0.844017
anchor_bottom = 0.871795
offset_bottom = 1.52588e-05
max_value = 31.0
texture_progress = ExtResource("10_3suh6")
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="reload_ad" type="TextureRect" parent="UI/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.612
anchor_top = 0.861
anchor_right = 0.679
anchor_bottom = 0.98
offset_left = -0.0400391
offset_top = 0.119934
offset_right = -0.680054
offset_bottom = -0.400024
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("11_43mu4")
expand_mode = 1
script = ExtResource("12_ovasc")
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="UI/Control"]
visible = false
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_ve7b5")
theme_override_font_sizes/font_size = 120
text = "¡Oleada 2!
Prepárate!"
horizontal_alignment = 1
metadata/_edit_lock_ = true

[node name="Node2D" parent="." instance=ExtResource("14_ssccl")]
visible = false

[node name="ControlsTouch" type="Node2D" parent="."]
position = Vector2(108, 700)
scale = Vector2(0.568, 0.554)
script = ExtResource("15_numha")

[node name="TouchScreenButtonW" type="TouchScreenButton" parent="ControlsTouch"]
position = Vector2(139.084, -34.296)
texture_normal = ExtResource("16_a1vf7")
texture_pressed = ExtResource("16_a1vf7")
shape = SubResource("CircleShape2D_h2rnp")

[node name="TouchScreenButtonA" type="TouchScreenButton" parent="ControlsTouch"]
position = Vector2(-29.9296, 160.65)
scale = Vector2(0.915493, 0.927798)
texture_normal = ExtResource("16_a1vf7")
texture_pressed = ExtResource("16_a1vf7")
shape = SubResource("CircleShape2D_h2rnp")

[node name="TouchScreenButtonS" type="TouchScreenButton" parent="ControlsTouch"]
position = Vector2(149.648, 337.545)
scale = Vector2(0.957746, 0.971119)
texture_normal = ExtResource("16_a1vf7")
texture_pressed = ExtResource("16_a1vf7")
shape = SubResource("CircleShape2D_h2rnp")

[node name="TouchScreenButtonD" type="TouchScreenButton" parent="ControlsTouch"]
position = Vector2(341.549, 146.209)
scale = Vector2(0.957746, 0.971119)
texture_normal = ExtResource("16_a1vf7")
texture_pressed = ExtResource("16_a1vf7")
shape = SubResource("CircleShape2D_h2rnp")

[node name="TouchScreenButtonR" type="TouchScreenButton" parent="ControlsTouch"]
position = Vector2(3522.89, 64.982)
scale = Vector2(1.75705, 1.81949)
texture_normal = ExtResource("16_a1vf7")
texture_pressed = ExtResource("16_a1vf7")
shape = SubResource("CircleShape2D_h2rnp")

[node name="TouchScreenButtonE" type="TouchScreenButton" parent="ControlsTouch"]
position = Vector2(3753.52, -1232.85)
scale = Vector2(0.757042, 0.815884)
texture_normal = ExtResource("16_a1vf7")
texture_pressed = ExtResource("16_a1vf7")
shape = SubResource("CircleShape2D_h2rnp")

[connection signal="pressed" from="ControlsTouch/TouchScreenButtonW" to="ControlsTouch" method="_on_touch_screen_button_w_pressed"]
[connection signal="released" from="ControlsTouch/TouchScreenButtonW" to="ControlsTouch" method="_on_touch_screen_button_w_released"]
[connection signal="pressed" from="ControlsTouch/TouchScreenButtonA" to="ControlsTouch" method="_on_touch_screen_button_a_pressed"]
[connection signal="released" from="ControlsTouch/TouchScreenButtonA" to="ControlsTouch" method="_on_touch_screen_button_a_released"]
[connection signal="pressed" from="ControlsTouch/TouchScreenButtonS" to="ControlsTouch" method="_on_touch_screen_button_s_pressed"]
[connection signal="released" from="ControlsTouch/TouchScreenButtonS" to="ControlsTouch" method="_on_touch_screen_button_s_released"]
[connection signal="pressed" from="ControlsTouch/TouchScreenButtonD" to="ControlsTouch" method="_on_touch_screen_button_d_pressed"]
[connection signal="released" from="ControlsTouch/TouchScreenButtonD" to="ControlsTouch" method="_on_touch_screen_button_d_released"]
[connection signal="pressed" from="ControlsTouch/TouchScreenButtonR" to="ControlsTouch" method="_on_touch_screen_button_r_pressed"]
[connection signal="released" from="ControlsTouch/TouchScreenButtonR" to="ControlsTouch" method="_on_touch_screen_button_r_released"]
[connection signal="pressed" from="ControlsTouch/TouchScreenButtonE" to="ControlsTouch" method="_on_touch_screen_button_e_pressed"]
[connection signal="released" from="ControlsTouch/TouchScreenButtonE" to="ControlsTouch" method="_on_touch_screen_button_e_released"]
